add image resources and change name from text to SVG

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <title>Patrick Lee</title>
 </head>
 <body>
-  <div class="patrick">
-    <h3>Patrick Lee</h3>
+  <div class="myname">
+    <img src="img/PL-white.svg" alt="My name is Patrick Lee.">
   </div>
 
 </body>
