WIP: add custom images, progress on social media footer

--- a/index.html
+++ b/index.html
@@ -5,9 +5,16 @@
   <title>Patrick Lee</title>
 </head>
 <body>
-  <div class="myname">
-    <img src="img/PL-white.svg" alt="My name is Patrick Lee.">
+  <div class="banner-header">
+    <div class="myname">
+      <img src="img/PL-white.svg" alt="My name is Patrick Lee.">
+    </div>
   </div>
 
+  <div class="banner-footer">
+    <div class="social">
+      <img src="img/Twitter social icons - circle - white.svg"><img src="img/GitHub-Mark-Light-vector.svg"><img src="img/LI-In-Bug-white.png">
+    </div>
+  </div>
 </body>
 </html>
