WIP: linking social media on banner

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 
   <div class="banner-footer">
     <div class="social">
-      <img src="img/Twitter social icons - circle - white.svg"><img src="img/GitHub-Mark-Light-vector.svg"><img src="img/LI-In-Bug-white.png">
+      <a href="https://twitter.com/patrickverbs/"><img src="img/Twitter social icons - circle - white.svg"></a>
+      <a href="https://github.com/patrick-verbs/"><img src="img/GitHub-Mark-Light-vector.svg"></a>
+      <a href="https://www.linkedin.com/in/patrick-lee-48b501135/"><img src="img/LI-In-Bug-white.png"></a>
     </div>
   </div>
 </body>
