add "PORTFOLIO" text section

--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
     <div class="myname">
       <img src="img/PL-white.svg" alt="My name is Patrick Lee.">
     </div>
+    <div class="splash-portfolio">
+      <h1>portfolio</h1>
+    </div>
   </div>
 
   <div class="banner-footer">
     <div class="social">
-      <a href="https://twitter.com/patrickverbs/"><img src="img/Twitter social icons - circle - white.svg"></a>
-      <a href="https://github.com/patrick-verbs/"><img src="img/GitHub-Mark-Light-vector.svg"></a>
-      <a href="https://www.linkedin.com/in/patrick-lee-48b501135/"><img src="img/LI-In-Bug-white.png"></a>
+      <a href="https://www.linkedin.com/in/patrick-lee-48b501135/"><img src="img/LI-In-Bug-white.png" alt="The LinkedIn logo."></a>
     </div>
   </div>
 </body>
