WIP: integrating Bootstrap columns

--- a/index.html
+++ b/index.html
@@ -1,17 +1,66 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
   <link href="css/styles.css" rel="stylesheet" type="text/css">
-  <title>Patrick Lee</title>
+  <title>Patrick Lee | Database Design</title>
 </head>
 <body>
   <div class="banner-header">
     <div class="myname">
-      <img src="img/PL-white.svg" alt="My name is Patrick Lee.">
+      <img src="img/PL-white.svg" alt="Patrick Lee">
     </div>
-    <div class="splash-portfolio">
-      <h1>portfolio</h1>
+  </div>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <div class="splash-portfolio">
+          <h1>portfolio</h1>
+        </div>
+      </div>
     </div>
+
+    <div class="row">
+      <div class="col-2"></div>
+      <div class="col-10">
+        <div class="splash-section">
+          <h3>my work</h3>
+          <h4>Works-in-Progress</h4>
+          <ul>
+            <li>thing</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-10">
+        <div class="splash-section">
+          <h3>about me</h3>
+          <p class="bio">
+            intro
+          </p>
+          <p class="bio">
+            background
+          </p>
+          <p class="bio">
+            interests, hobbies, skills
+          </p>
+        </div>
+      </div>
+      <div class="col-2"></div>
+    </div>
+
+    <div class="row">
+      <div class="col-2"></div>
+      <div class="col-10">
+        <div class="splash-section">
+          <h3>contact</h3>
+        </div>
+      </div>
+    </div>
+
   </div>
 
   <div class="banner-footer">
