WIP: add portrait image

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
   <link href="css/styles.css" rel="stylesheet" type="text/css">
-  <title>Patrick Lee | Database Design</title>
+  <title>Patrick Lee | Learning to Code</title>
 </head>
 <body>
   <div class="banner-header">
@@ -16,6 +16,7 @@
     <div class="row">
       <div class="col-12">
         <div class="splash-portfolio">
+          <img src="img/pat_icon1-2[180].png" alt="Profile picture of Patrick in stylized pixel-art.">
           <h1>portfolio</h1>
         </div>
       </div>
