--- a/index.html
+++ b/index.html
@@ -1,11 +1,33 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-  <link href="css/styles.css" rel="stylesheet" type="text/css">
-  <title>Patrick Lee | Learning to Code</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Josefin+Sans:100,200,300,400,500,600,700|Cormorant+Garamond:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i">
+  <link rel="stylesheet" href="css/styles.css" type="text/css">
+  <title>Patrick Lee | Media Databasing & UX</title>
 </head>
 <body>
+  <header>
+    <a href="index.html" class="header-me">Patrick Lee</a>
+    <nav>
+      <ul>
+        <li><a href="#portfolio">Portfolio</a></li>
+        <li><a href="#about">About me</a></li>
+        <li><a href="#portfolio">Contact</a></li>
+      </ul>>
+      <a href="#projects" class="header-projects">Projects</a>
+    </nav>
+  </header>
+
+  <main>
+    MAIN
+  </main>
+
+  <footer>
+    FOOTER
+  </footer>
+
   <div class="banner-header">
     <div class="myname">
       <img src="img/PL-white.svg" alt="Patrick Lee">
