add <nav> menu & begin <main> content

--- a/index.html
+++ b/index.html
@@ -12,16 +12,19 @@
     <a href="index.html" class="header-me">Patrick Lee</a>
     <nav>
       <ul>
-        <li><a href="#portfolio">Portfolio</a></li>
+        <li><a href="#projects">Projects</a></li>
         <li><a href="#about">About me</a></li>
-        <li><a href="#portfolio">Contact</a></li>
+        <li><a href="#contact">Contact</a></li>
       </ul>>
-      <a href="#projects" class="header-projects">Projects</a>
+      <a href="#samples" class="header-samples">Samples</a>
     </nav>
   </header>
 
   <main>
-    MAIN
+    <section>
+      <h2>Programmer. Writer. Editor. Designer.</h2>
+      <h1>Developing intersectional solutions between relational database & digital asset management, long-form strategy & brand identity in multimedia franchises, work-for-hire training & productivity, trademark and copyright licensing, crypto smart-contracts, and the semantic web. The future is programmable.</h1>
+    </section>>
   </main>
 
   <footer>
