style main banner text

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   </header>
 
   <main>
-    <section>
-      <h2>Programmer. Writer. Editor. Designer.</h2>
+    <section class="index-banner">
+      <h2>Programmer.<br>Designer.<br>Writer.<br>Editor.</h2>
       <h1>Developing intersectional solutions between relational database & digital asset management, long-form strategy & brand identity in multimedia franchises, work-for-hire training & productivity, trademark and copyright licensing, crypto smart-contracts, and the semantic web. The future is programmable.</h1>
     </section>>
   </main>
@@ -41,7 +41,7 @@
     <div class="row">
       <div class="col-12">
         <div class="splash-portfolio">
-          <img src="img/pat_icon1-2[180].png" alt="Profile picture of Patrick in stylized pixel-art.">
+          <!-- <img src="img/pat_icon1-2[180].png" alt="Profile picture of Patrick in stylized pixel-art."> -->
           <h1>portfolio</h1>
         </div>
       </div>
