style all banner <h1> and <h2> text

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <main>
     <section class="index-banner">
       <h2>Programmer.<br>Designer.<br>Writer.<br>Editor.</h2>
-      <h1>Developing intersectional solutions between relational database & digital asset management, long-form strategy & brand identity in multimedia franchises, work-for-hire training & productivity, trademark and copyright licensing, crypto smart-contracts, and the semantic web. The future is programmable.</h1>
+      <h1>Developing intersectional solutions between relational database & digital asset management, long-form strategy & brand identity in multimedia franchises, work-for-hire training & productivity, trademark and copyright licensing, crypto smart-contracts, and the semantic web.</h1>
     </section>>
   </main>
 
