add footer element

--- a/index.html
+++ b/index.html
@@ -22,13 +22,42 @@
 
   <main>
     <section class="index-banner">
-      <h2>Programmer.<br>Designer.<br>Writer.<br>Editor.</h2>
-      <h1>Developing intersectional solutions between relational database & digital asset management, long-form strategy & brand identity in multimedia franchises, work-for-hire training & productivity, trademark and copyright licensing, crypto smart-contracts, and the semantic web.</h1>
+      <div class="vertical-center">
+        <h2>Programmer.<br>Designer.<br>Writer.<br>Editor.</h2>
+        <h1><br>Developing intersectional solutions between relational database & digital asset management, long-form strategy & brand identity in multimedia franchises, work-for-hire training & productivity, trademark and copyright licensing, crypto smart-contracts, and the semantic web.</h1>
+      </div>
     </section>>
+    <section class="index-content?">
+      stuff
+    </section>
   </main>
 
   <footer>
-    FOOTER
+    <ol>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">Cases</a></li>
+      <li><a href="#">Portfolio</a></li>
+      <li><a href="#">About me</a></li>
+      <li><a href="#">Contact</a></li>
+    </ol>>
+    <ol>
+      <li><a href="#">Latest projects</a></li>
+      <li><a href="#">Project 1</a></li>
+      <li><a href="#">Project 2</a></li>
+      <li><a href="#">Project 3</a></li>
+      <li><a href="#">Project 4</a></li>
+    </ol>>
+    <div class="footer-social">
+      <a href="#">
+        <img src="img/LI-In-Bug-white.png" alt="LinkedIn logo">
+      </a>
+      <a href="#">
+        <img src="img/GitHub_Logo_White.png" alt="GitHub logo">
+      </a>
+      <a href="#">
+        <img src="img/Twitter social icons - circle - white.svg" alt="Twitter logo">
+      </a>
+    </div>
   </footer>
 
   <div class="banner-header">
