fine-tune spacing of footer text & images

--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
   </main>
 
   <footer>
-    <ol>
+    <ol class="footer-links-main">
       <li><a href="#">Home</a></li>
-      <li><a href="#">Cases</a></li>
+      <li><a href="#">Projects</a></li>
       <li><a href="#">Portfolio</a></li>
       <li><a href="#">About me</a></li>
       <li><a href="#">Contact</a></li>
     </ol>>
-    <ol>
+    <ol class="footer-links-projects">
       <li><a href="#">Latest projects</a></li>
       <li><a href="#">Project 1</a></li>
       <li><a href="#">Project 2</a></li>
@@ -48,13 +48,13 @@
       <li><a href="#">Project 4</a></li>
     </ol>>
     <div class="footer-social">
-      <a href="#">
+      <a href="https://www.linkedin.com/in/patrick-lee-48b501135/">
         <img src="img/LI-In-Bug-white.png" alt="LinkedIn logo">
       </a>
-      <a href="#">
-        <img src="img/GitHub_Logo_White.png" alt="GitHub logo">
+      <a href="https://github.com/patrick-verbs/">
+        <img src="img/GitHub-Mark-Light-120px-plus.png" alt="GitHub logo">
       </a>
-      <a href="#">
+      <a href="https://www.twitter.com/patrickverbs/">
         <img src="img/Twitter social icons - circle - white.svg" alt="Twitter logo">
       </a>
     </div>
