--- a/index.html
+++ b/index.html
@@ -28,30 +28,34 @@
       </div>
     </section>
     <section class="index-projects">
-      Repository link | GH Pages link
+      <div class="vertical-center">
+        Repository link | GH Pages link
+      </div>
     </section>
     <section class="index-about">
-      <h3>About me</h3>
-      <article>
-        <p>
-          Intro
-        </p>
-        <p>
-          background
-        </p>
-        <p>
-          interests, hobbies, skills
-        </p>
-      </article>
-      Patrick Lee
-      patricklee1138 [at] gmail.com
+      <div class="vertical-center">
+        <h3><a name="#about"></a>About me</h3>
+        <article>
+          <p>
+            Intro
+          </p>
+          <p>
+            background
+          </p>
+          <p>
+            interests, hobbies, skills
+          </p>
+        </article>
+      </div>
     </section>
     <section class="index-contact">
-      <ul>
-        <strong>Contact:</strong>
-        <strong><li>Patrick Lee</li></strong>
-        <li><em>patricklee1138 [at] gmail.com</em></li>
-      </ul>
+      <div class="vertical-center">
+        <ul>
+          <a id="#contact"><strong>Contact:</strong></a>
+          <strong><li>Patrick Lee</li></strong>
+          <li><em>patricklee1138 [at] gmail.com</em></li>
+        </ul>
+      </div>
     </section>
   </main>
 
@@ -61,7 +65,7 @@
       <li><a href="#">Projects</a></li>
       <li><a href="#">Portfolio</a></li>
       <li><a href="#">About me</a></li>
-      <li><a href="#">Contact</a></li>
+      <li><a href="#contact">Contact</a></li>
     </ol>
     <ol class="footer-links-projects">
       <li><a href="#">Latest projects</a></li>
