add styling to 'Projects' section

--- a/index.html
+++ b/index.html
@@ -31,7 +31,50 @@
     <span class="anchor" id="projects"></span>
     <section class="index-projects">
       <div class="vertical-center">
-        Repository link | GH Pages link
+        <div class="odd">
+          <h3>"Cupcake Shop"</h3>
+          <p>
+            <a href="https://patrick-verbs.github.io/cupcake-shop/">Live webpage</a> | <a href="https://github.com/patrick-verbs/cupcake-shop">Repository</a>
+            <br>
+            Description.
+          </p>
+        </div>
+        <br>
+        <div class="even">
+          <h3>"Animal Shelter"</h3>
+          <p>
+            <a href="https://patrick-verbs.github.io/animal-shelter/">Live webpage</a> | <a href="https://github.com/patrick-verbs/animal-shelter">Repository</a>
+            <br>
+            Description.
+          </p>
+        </div>
+        <br>
+        <div class="odd">
+          <h3>"Wikipedia Rebuild"</h3>
+          <p>
+            <a href="https://patrick-verbs.github.io/wikipedia-rebuild/">Live webpage</a> | <a href="https://github.com/patrick-verbs/bootstrap-exercise">Repository</a>
+            <br>
+            Description.
+          </p>
+        </div>
+        <br>
+        <div class="even">
+          <h3>Templates</h3>
+          <p>
+            <a href="https://github.com/patrick-verbs/template">Repository only</a>
+            <br>
+            Description.
+          </p>
+        </div>
+        <br>
+        <div class="odd">
+          <h3>Resources</h3>
+          <p>
+            <a href="https://github.com/patrick-verbs/resources">Repository only</a>
+            <br>
+            Description.
+          </p>
+        </div>
       </div>
     </section>
 
@@ -58,8 +101,8 @@
       <div class="vertical-center">
         <ul>
           <a id="#contact"><strong>Contact &mdash;</strong></a>
-          <strong><li>Patrick Lee</li></strong>
-          <li><em>patricklee1138 [at] gmail.com</em></li>
+          <li>Patrick Lee</li>
+          <li><em><a href="mailto:patricklee1138@gmail.com">patricklee1138@gmail.com</a></em></li>
         </ul>
       </div>
     </section>
@@ -67,7 +110,7 @@
 
   <footer>
     <ol class="footer-links-main">
-      <li><span onclick="document.body.scrollTop = 0;">Home</span></li>
+      <li><a href="#">Home</li>
       <li><a href="#projects">Projects</a></li>
       <li><a href="#portfolio">Portfolio</a></li>
       <li><a href="#about">About me</a></li>
