add written copy to 'Projects' section

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <li><a href="#about">About me</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
+      <!-- Later feature, remove this & corresponding CSS -->
       <a href="#samples" class="header-samples">Samples</a>
     </nav>
   </header>
@@ -36,7 +37,7 @@
           <p>
             <a href="https://patrick-verbs.github.io/cupcake-shop/">Live webpage</a> | <a href="https://github.com/patrick-verbs/cupcake-shop">Repository</a>
             <br>
-            Description.
+            A pair-programming exercise done in Week 1 of the Epicodus full-time, full-stack developer bootcamp. The assignment was to create a "cupcake shop" web page using three image elements. I created the file structure, sourced the images, and wrote most of the HTML and CSS during my 15 minutes of driving (having my turn at the keyboard and mouse).
           </p>
         </div>
         <br>
@@ -45,16 +46,16 @@
           <p>
             <a href="https://patrick-verbs.github.io/animal-shelter/">Live webpage</a> | <a href="https://github.com/patrick-verbs/animal-shelter">Repository</a>
             <br>
-            Description.
+            Another pair-programming exercise made during Week 1 of the Epicodus developer program. This was to be a simple mockup of an "animal shelter" website using basic HTML and CSS, including a sidebar navigation element.
           </p>
         </div>
         <br>
         <div class="odd">
           <h3>"Wikipedia Rebuild"</h3>
           <p>
-            <a href="https://patrick-verbs.github.io/wikipedia-rebuild/">Live webpage</a> | <a href="https://github.com/patrick-verbs/bootstrap-exercise">Repository</a>
+            <a href="https://patrick-verbs.github.io/bootstrap-exercise/wikipedia.html">Live webpage</a> | <a href="https://github.com/patrick-verbs/bootstrap-exercise">Repository</a>
             <br>
-            Description.
+            This was a Bootstrap exercise, also done as an optional assignment during the first week of the Epicodus bootcamp. The goal was to recreate Wikipedia's Main Page using Bootstrap; as I wasn't familiar with Bootstrap, I limited my focus to recreating the Main Page's grid layout using the CSS framework's "container," "row," and "col" elements.
           </p>
         </div>
         <br>
@@ -63,7 +64,7 @@
           <p>
             <a href="https://github.com/patrick-verbs/template">Repository only</a>
             <br>
-            Description.
+            A repository I started to store various templates as I work my way through the Epicodus curriculum. This began as prep work for the first project&mdash;the theme of which was not revealed until that Friday, but based on its known requirements. I spent several hours playing around in Markup and familiarizing myself with its features and limitations, resulting in the README file that is currently my only template.
           </p>
         </div>
         <br>
@@ -72,7 +73,7 @@
           <p>
             <a href="https://github.com/patrick-verbs/resources">Repository only</a>
             <br>
-            Description.
+            Similar to my <em>Template</em> repository, this is a resource I created to track my solutions, research, and best-practices for coding and design. I created this to "show my work" while designing and building this portfolio webpage, and because I didn't want to forget these tricks and best practices&mdash;and where I learned them&mdash;years down the road.
           </p>
         </div>
       </div>
@@ -116,6 +117,7 @@
       <li><a href="#about">About me</a></li>
       <li><a href="#contact">Contact</a></li>
     </ol>
+    <!-- Later feature, remove this -->
     <ol class="footer-links-projects">
       <li><a href="#">Latest projects</a></li>
       <li><a href="#">Project 1</a></li>
