--- a/index.html
+++ b/index.html
@@ -83,12 +83,13 @@
     <section class="index-about">
       <div class="vertical-center">
         <article>
-          <h3><a name="#about"></a>About me</h3>
+          <h3>About me</h3>
           <p>
-            Intro
+            
           </p>
           <p>
             background
+            Programming has always called to me.
           </p>
           <p>
             interests, hobbies, skills
@@ -101,7 +102,7 @@
     <section class="index-contact">
       <div class="vertical-center">
         <ul>
-          <a id="#contact"><strong>Contact &mdash;</strong></a>
+          <strong>Contact &mdash;</strong>
           <li>Patrick Lee</li>
           <li><em><a href="mailto:patricklee1138@gmail.com">patricklee1138@gmail.com</a></em></li>
         </ul>
