add 'lorem ipsum' text to fill 'About me' section

--- a/index.html
+++ b/index.html
@@ -85,14 +85,13 @@
         <article>
           <h3>About me</h3>
           <p>
-            
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque repellat libero cum, nulla sed, ex temporibus eum a quia, consectetur incidunt aperiam vitae explicabo voluptatibus dicta molestiae ipsam fugit provident?
           </p>
           <p>
-            background
-            Programming has always called to me.
+            background: Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima minus, laudantium aut quia expedita rerum et fugit numquam. Iusto veniam velit veritatis dolores ipsum numquam molestiae dolorem. Ducimus, doloribus facilis.
           </p>
           <p>
-            interests, hobbies, skills
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni id eos hic doloribus aliquid corporis reprehenderit atque ullam! Recusandae non possimus eum rem ea reprehenderit saepe quaerat similique soluta excepturi.
           </p>
         </article>
       </div>
