DEBUG: test 'fixed' bug for <header> on mobile

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Patrick Lee | </title>
 </head>
 <body>
-  <header>
+  <div class="makeshift-header">
     <a href="#" class="header-me">Patrick Lee</a>
     <nav>
       <ul>
@@ -19,7 +19,7 @@
       <!-- Later feature, remove this & corresponding CSS -->
       <a href="#samples" class="header-samples">Samples</a>
     </nav>
-  </header>
+  </div>
 
   <main>
     <section class="index-banner">
