--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/reset.css" type="text/css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Josefin+Sans:100,200,300,400,500,600,700|Cormorant+Garamond:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i">
   <link rel="stylesheet" href="css/styles.css" type="text/css">
   <title>Patrick Lee | </title>
