BUGFIX: inconsistent section width on mobile

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <ul>
           <strong>Contact &mdash;</strong>
           <li>Patrick Lee</li>
-          <li><em><a href="mailto:patricklee1138@gmail.com">patricklee1138@gmail.com</a></em></li>
+          <li>patricklee1138[at]gmail[dot]com</li>
         </ul>
       </div>
     </section>
